# multiomics_explorer

./: .env.example  .gitignore  .mcp.json  AGENT.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  REVIEW_FIXES.md  eval_report.md  pyproject.toml
.claude/: settings.json
.claude/agents/: api-updater.md  code-reviewer.md  doc-updater.md  query-builder.md  test-updater.md  tool-wrapper.md
config/: schema_config.yaml
docs/: architecture.md  architecture_target.md  architecture_target_v2.md  architecture_target_v3.md  cyver-dev-todo.md  kg_changes_find_gene.md  transition_plan.md  transition_plan_v2.md  transition_plan_v3.md  whats_changed_v3.md
docs/analysis/: catalase_expression.md
docs/kg-specs/: 2026-04-05-cluster-info-in-list-tools-design.md  2026-04-05-materialize-cluster-properties.md  2026-04-12-ontology-hierarchy-level.md  2026-04-14-ontology-term-gene-count-by-organism.md  2026-04-26-derived-metric-numeric-distribution-stats.md  2026-04-26-unify-derived-metric-edge-value.md  2026-04-27-derived-metric-fulltext-enrichment.md  2026-05-05-metabolites-surface-asks.md  2026-05-06-metabolites-followup-asks.md  kg-spec-expression-call.md  kg-spec-gene-neighbors.md  kg-spec-list-experiments.md  kg-spec-list-organisms.md  kg-spec-resolve-gene.md  kg-spec-search-homolog-groups.md  list_publications.md
docs/methodology/: llm_omics_analysis.md  llm_omics_analysis_v2.md  llm_omics_analysis_v3.md  tool_framework.md
docs/testplans/: testplan.md
docs/tool-specs/: 2026-05-05-phase1-pass-through-plumbing.md  2026-05-05-phase2-cross-cutting-renames.md  2026-05-05-phase3-compound-anchored-tightening.md  2026-05-05-phase5-greenfield-assay-tools.md  cluster-a-f1-surface.md  differential_expression_by_gene.md  differential_expression_by_ortholog.md  expression_by_ortholog_script.md  gene_derived_metrics.md  gene_homologs.md  gene_ontology_terms.md  gene_overview.md  gene_sequence_and_neighbors.md  genes_by_boolean_and_categorical_metric.md  genes_by_function.md  genes_by_homolog_group.md  genes_by_homolog_group_changes.md  genes_by_metabolite.md  genes_by_numeric_metric.md  genes_by_ontology.md  kg_schema.md  list_derived_metrics.md  list_experiments.md  list_experiments_changes.md  list_filter_values.md  list_metabolite_assays.md  list_metabolites.md  list_organisms.md  list_organisms_changes.md  list_organisms_chemistry.md  list_publications.md  metabolites_by_assay.md  metabolites_by_gene.md  ontology-tools-psortb-signalp.md  ontology-tools-tcdb-cazy.md  publication-discusses-surface.md  resolve_gene.md  run_cypher.md  search_homolog_groups.md  search_ontology.md
evaluation_data/: stage1_validation_queries.yaml  stage2_nl_cypher_pairs.yaml  stage3_reasoning_cases.yaml
examples/: README.md  metabolites.py  pathway_enrichment.py
multiomics_explorer/: __init__.py  _outfacing_lint.py
multiomics_explorer/agents/: cypher_agent.py  reasoning_agent.py  tools.py
multiomics_explorer/analysis/: __init__.py  enrichment.md  enrichment.py  expression.py  frames.py
multiomics_explorer/api/: __init__.py  client.py  functions.py
multiomics_explorer/cli/: main.py
multiomics_explorer/config/: prompts.yaml  schema_baseline.yaml  settings.py
multiomics_explorer/evaluation/: metrics.py
multiomics_explorer/kg/: connection.py  constants.py  queries.py  queries_lib.py  schema.py
multiomics_explorer/mcp_server/: server.py  tools.py
multiomics_explorer/ui/: app.py
plans/: plan_template.md
plans/redefine_mcp_tools/: add_category_role_ontologies.md  add_pfam_ontology.md  convention_gene_stub.md  convention_kg_constants.md  expression_tools_redesign.md  find_gene_improvements.md  gene_tools_implementation.md  gene_tools_three_tier.md  get_gene_details_redefinition.md  get_gene_redefinition.md  get_homologs_redefinition.md  kg_changes_for_category_role_ontologies.md  kg_changes_for_gene_details.md  kg_changes_for_ontology_tools.md  kg_homolog_redesign.md  kg_schema_improvements_for_gene_details.md  list_experiments.md  list_publications.md  new_tool_find_genes_by_function.md  new_tool_list_filter_values.md  new_tool_list_organisms.md  ortholog_migration_todo.md  query_expression_redefinition.md  vector_embeddings_semantic_search.md
scripts/: build_about_content.py  build_test_fixtures.py  export_schema.py  inspect.sh  run_eval.py  validate_connection.py
src/chains/: chain.py
tests/: conftest.py
tests/evals/: cases.yaml  mcp_evaluation.xml  test_eval.py
tests/fixtures/: gene_data.py
tests/integration/: test_about_examples.py  test_analysis.py  test_api_contract.py  test_cli.py  test_cyver_queries.py  test_edge_case_contracts.py  test_examples.py  test_kg_constants_drift.py  test_mcp_tools.py  test_param_edge_cases.py  test_tool_correctness_kg.py
tests/regression/: test_regression.py
tests/unit/: test_about_content.py  test_analysis.py  test_analysis_about_content.py  test_api_functions.py  test_connection.py  test_edge_case_invariants.py  test_enrichment.py  test_enrichment_result.py  test_examples_about_content.py  test_frames.py  test_guide_about_content.py  (+9 more)
(+439 files in other folders)
