[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multiomics-explorer"
version = "0.1.0"
description = "LangChain agent for reasoning over Prochlorococcus/Alteromonas multi-omics knowledge graph"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core LangChain
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",

    # LLM providers
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",

    # Neo4j
    "neo4j>=5.0",
    "langchain-neo4j>=0.1.0",

    # Evaluation
    "ragas>=0.2.0",

    # Configuration & utilities
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.0",

    # Web UI
    "streamlit>=1.40.0",
    "pandas>=2.0",
    "plotly>=5.0",

    # Testing
    "pytest>=9.0.2",

    # MCP server
    "mcp[cli]>=1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "ruff>=0.8.0",
]

[project.scripts]
multiomics-explorer = "multiomics_explorer.cli.main:app"
multiomics-kg-mcp = "multiomics_explorer.mcp_server.server:main"

[tool.pytest.ini_options]
markers = [
    "kg: marks tests that require a running Neo4j instance (bolt://localhost:7687)",
    "eval: marks evaluation tests (slow, requires LLM API calls)",
    "slow: marks slow tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
