[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multiomics-explorer"
version = "0.1.0"
description = "Tools for exploring a Prochlorococcus/Alteromonas multi-omics knowledge graph"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Neo4j
    "neo4j>=5.0",
    # Configuration & utilities
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    # CLI
    "typer>=0.12.0",
    "rich>=13.0",
    # Testing
    "pytest>=9.0.2",
    # MCP server
    "fastmcp>=3.0",
    "cyver>=2.0.2",
    # Analysis utilities
    "pandas>=2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "pytest-asyncio>=1.3.0",
    "pytest-regressions>=2.10.0",
    "ruff>=0.8.0",
]

[project.scripts]
multiomics-explorer = "multiomics_explorer.cli.main:app"
multiomics-kg-mcp = "multiomics_explorer.mcp_server.server:main"

[tool.pytest.ini_options]
markers = [
    "kg: marks tests that require a running Neo4j instance (bolt://localhost:7687)",
    "eval: marks evaluation tests (slow, requires LLM API calls)",
    "slow: marks slow tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:CyVer",
]

[tool.ruff]
line-length = 100
target-version = "py311"
