[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multiomics-explorer"
version = "0.1.0"
description = "Tools for exploring a Prochlorococcus/Alteromonas multi-omics knowledge graph"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["multi-omics", "prochlorococcus", "knowledge-graph", "neo4j", "bioinformatics"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]

dependencies = [
    # Neo4j
    "neo4j>=5.0",
    # Configuration & utilities
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    # MCP server
    "fastmcp>=3.0",
    "cyver>=2.0.2",
    # Analysis utilities
    "pandas>=2.0",
    "scipy>=1.11",
    "statsmodels>=0.14",
]

[project.urls]
Repository = "https://github.com/wosnat/multiomics_explorer"
Issues = "https://github.com/wosnat/multiomics_explorer/issues"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-regressions>=2.10.0",
    "ruff>=0.8.0",
]

[project.scripts]
multiomics-kg-mcp = "multiomics_explorer.mcp_server.server:main"

[tool.pytest.ini_options]
markers = [
    "kg: marks tests that require a running Neo4j instance (bolt://localhost:7687)",
    "eval: marks evaluation tests (slow, requires LLM API calls)",
    "slow: marks slow tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:CyVer",
]

[tool.hatch.build.targets.wheel]
# inputs/ holds dev-time YAML consumed by scripts/build_about_content.py
# to generate skills/.../tools/*.md. Generated MD ships in the wheel; the
# YAML inputs do not.
exclude = [
    "multiomics_explorer/inputs/**",
]

[tool.ruff]
line-length = 100
target-version = "py311"
